<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/projectdetail.appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/projectdetail.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <View
                android:id="@+id/projectdetail.image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/appbarlayout_height_medium"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/projectdetail.toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/small_padding_margin"
            android:paddingBottom="@dimen/small_padding_margin">

            <TextView
                android:id="@+id/projectdetail.textview.company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="sans-serif-condensed"
                android:paddingLeft="@dimen/half_framenlayout_item_timeline"
                android:text="-"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/projectdetail.textview.year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/projectdetail.textview.company"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/small_padding_margin"
                android:paddingLeft="@dimen/half_framenlayout_item_timeline"
                android:text="-"
                android:textAppearance="?android:textAppearanceMedium" />


            <FrameLayout
                android:id="@+id/projectdetail.framelayout.description"
                android:layout_width="@dimen/framenlayout_item_timeline"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/projectdetail.textview.description.text"
                android:layout_alignStart="@+id/projectdetail.textview.description.text"
                android:layout_alignTop="@+id/projectdetail.textview.description.text">

                <sdejesus.portfolio.custom.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:src="@drawable/ic_description_black"
                    app:civ_border_color="@android:color/black"
                    app:civ_border_width="2dp" />
            </FrameLayout>

            <TextView
                android:id="@+id/projectdetail.textview.description.text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/projectdetail.textview.year"
                android:fontFamily="sans-serif-condensed"
                android:paddingLeft="@dimen/framenlayout_item_timeline"
                android:text="@string/description"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/projectdetail.textview.description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/projectdetail.textview.description.text"
                android:fontFamily="sans-serif-condensed"
                android:paddingLeft="@dimen/framenlayout_item_timeline"
                android:textAppearance="?android:textAppearanceMedium" />

            <FrameLayout
                android:id="@+id/projectdetail.framelayout.tags"
                android:layout_width="@dimen/framenlayout_item_timeline"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/projectdetail.textview.tags.text"
                android:layout_alignStart="@+id/projectdetail.textview.tags.text"
                android:layout_alignTop="@+id/projectdetail.textview.tags.text">

                <sdejesus.portfolio.custom.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:src="@drawable/ic_tag_black"
                    app:civ_border_color="@android:color/black"
                    app:civ_border_width="2dp" />
            </FrameLayout>

            <TextView
                android:id="@+id/projectdetail.textview.tags.text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/projectdetail.textview.description"
                android:fontFamily="sans-serif-condensed"
                android:paddingLeft="@dimen/framenlayout_item_timeline"
                android:text="@string/tags"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/projectdetail.textview.tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/projectdetail.textview.tags.text"
                android:fontFamily="sans-serif-condensed"
                android:paddingLeft="@dimen/framenlayout_item_timeline"
                android:text=""
                android:textAppearance="?android:textAppearanceMedium" />

            <FrameLayout
                android:id="@+id/projectdetail.framelayout.repository"
                android:layout_width="@dimen/framenlayout_item_timeline"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/projectdetail.textview.repository.text"
                android:layout_alignStart="@+id/projectdetail.textview.repository.text"
                android:layout_alignTop="@+id/projectdetail.textview.repository.text">

                <sdejesus.portfolio.custom.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:src="@drawable/ic_github_black"
                    app:civ_border_color="@android:color/black"
                    app:civ_border_width="2dp" />
            </FrameLayout>

            <TextView
                android:id="@+id/projectdetail.textview.repository.text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/projectdetail.textview.tags"
                android:fontFamily="sans-serif-condensed"
                android:paddingLeft="@dimen/framenlayout_item_timeline"
                android:text="@string/repository"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/projectdetail.textview.repository"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/projectdetail.textview.repository.text"
                android:autoLink="web"
                android:fontFamily="sans-serif-condensed"
                android:paddingLeft="@dimen/framenlayout_item_timeline"
                android:textAppearance="?android:textAppearanceMedium" />

            <FrameLayout
                android:id="@+id/projectdetail.framelayout.link"
                android:layout_width="@dimen/framenlayout_item_timeline"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/projectdetail.textview.link.text"
                android:layout_alignStart="@+id/projectdetail.textview.link.text"
                android:layout_alignTop="@+id/projectdetail.textview.link.text">

                <sdejesus.portfolio.custom.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:src="@drawable/ic_link_black"
                    app:civ_border_color="@android:color/black"
                    app:civ_border_width="2dp" />
            </FrameLayout>

            <TextView
                android:id="@+id/projectdetail.textview.link.text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/projectdetail.textview.repository"
                android:fontFamily="sans-serif-condensed"
                android:paddingLeft="@dimen/framenlayout_item_timeline"
                android:text="@string/link"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/projectdetail.textview.link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/projectdetail.textview.link.text"
                android:autoLink="web"
                android:fontFamily="sans-serif-condensed"
                android:paddingLeft="@dimen/framenlayout_item_timeline"
                android:text=""
                android:textAppearance="?android:textAppearanceMedium" />

            <View
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_above="@id/projectdetail.framelayout.tags"
                android:layout_below="@id/projectdetail.framelayout.description"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/half_framenlayout_item_timeline"
                android:background="@android:color/black" />

            <View
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_above="@id/projectdetail.framelayout.repository"
                android:layout_below="@id/projectdetail.framelayout.tags"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/half_framenlayout_item_timeline"
                android:background="@android:color/black" />

            <View
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_above="@id/projectdetail.framelayout.link"
                android:layout_below="@id/projectdetail.framelayout.repository"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/half_framenlayout_item_timeline"
                android:background="@android:color/black" />

            <FrameLayout
                android:id="@+id/projectdetail.fragmentlayout.gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/projectdetail.textview.link"
                android:layout_margin="@dimen/small_padding_margin">

            </FrameLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
